# obsbot_control_linux

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  test.cc
gui/: BUILD  CMakeLists.txt  camera-control.desktop  camera_control_gui.cc  gui.cc  gui.hh
libs/: BUILD  CMakeLists.txt  camera_control.cc  camera_control.hh  camera_control_test.cc
usbio/: BUILD  CMakeLists.txt  usbio.cc  usbio.hh  usbio_test.cc
